[package]
name = "clocktop"
version = "0.2.0"
edition = "2024"
repository = "https://github.com/AndreiRailean/clocktop"
build = "build.rs"

[dependencies]
chrono = "0.4.45"
chrono-tz = "0.10.4"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
duration-str = "0.21.0"
figment = {version = "0.10.19", features = ["toml"]}
humantime = "2.3.0"
humantime-serde = "1.1.1"
iana-time-zone = "0.1.65"
log = "0.4.32"
ratatui = "0.30.1"
serde = { version = "1.0.228", features = ["derive"] }
shadow-rs = "2.0.0"
simplelog = "0.12.2"
time = "=0.3.49"
toml = "1.1.2"

[build-dependencies]
shadow-rs = "2.0.0"

[profile.release]
opt-level = 'z'
lto = true
codgen-units = 1
panic = 'abort'

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

